--- a/announcements/templates/announcements/profile.html
+++ b/announcements/templates/announcements/profile.html
@@ -1,5 +1,8 @@
 {% extends "bulletin/base.html" %}
 {% load crispy_forms_tags %}
+{% block image %}
+<!-- Empty block to prevent base.html's image block from rendering -->
+{% endblock image %}
 {% block content %}
 <section class="vh-1" style="background-color: #eee;">
     <div class="container h-150">
