removed unecessary files

--- a/bulletin/templates/bulletin/contact.html
+++ b/bulletin/templates/bulletin/contact.html
@@ -1,5 +1,4 @@
 {% extends "bulletin/base.html" %}
-
 {% block content %}
 {% load static %}
 {% block image %}
@@ -121,11 +120,11 @@
                   </li>
                   <li class="mb-3">
                       <i class="bi bi-envelope-fill text-warning"></i>
-                      <strong>Email:</strong> support@campusconnect.com
+                      <strong>Email:</strong> itsca03@gmail.com
                   </li>
                   <li class="mb-3">
                       <i class="bi bi-phone-fill text-warning"></i>
-                      <strong>Phone:</strong> +91 74066 44449
+                      <strong>Phone:</strong> +91 7483974604
                   </li>
                   <li class="mb-3">
                       <i class="bi bi-clock-fill text-warning"></i>
